5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1734_2508.log
== TEST (2019-05-14 19:09:20) 
-- CODE:
n= float(input("numero k: ")
apropi=0
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	apropi= apropi + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(apropi, 8))
-- ERROR:
File "XXXX", line 2
    apropi=0
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:09:32) 
-- CODE:
n= float(input("numero k: ")
apropi= 0
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	apropi= apropi + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(apropi, 8))
-- ERROR:
File "XXXX", line 2
    apropi= 0
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:09:58) 
-- CODE:
n= float(input("numero k: ")
apropi= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	apropi= apropi + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(apropi, 8))
-- ERROR:
File "XXXX", line 2
    apropi= 3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:10:27) 
-- CODE:
n= float(input("numero k: ")
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pai, 8))
-- ERROR:
File "XXXX", line 2
    pia= 3
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:10:40) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pai, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(pai, 8))
NameError: name 'pai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:10:56) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:11:13) 
-- CODE:
n= float(input("numero k: "))
pia= 0
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:11:36) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:12:03) 
-- CODE:
n= float(input("numero k: "))
pia= 0
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= 3 + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.0030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:14:13) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia  + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:14:29) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<=n):
	sinal= (-1)**c
	c=c+1
	pia= pia  + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14088134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:14:35) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<=n):
	sinal= (-1)**c
	c=c+1
	pia= pia  + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14088134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:15:35) 
-- CODE:
n= float(input("numero k: "))
pia= 2
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia  + sinal* 4/(i* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
2.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:17:21) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia  + sinal* 4/((i)* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:18:43) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	pia= pia  + sinal* 4/((i)* (i+1)*(i+2))
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:19:00) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	i= i + 2
	pia= pia  + sinal* 4/((i)* (i+1)*(i+2))
print(round(pia, 8))
-- OUTPUT:
3.02578533
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:19:36) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	i= i + 2
	pia= sinal* 4/((i)* (i+1)*(i+2))
print(round(pia, 8))
-- OUTPUT:
0.0018315
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:20:00) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	c=c+1
	i= i + 2
	pia= 4/((i)* (i+1)*(i+2))
print(round(pia, 8))
-- OUTPUT:
0.0018315
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:20:40) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	pia= pia+ 4/((i)* (i+1)*(i+2))
	c=c+1
	i= i + 2
	
print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:22:24) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
while (c<n):
	sinal= (-1)**c
	pia= pia+ 4/((i)* (i+1)*(i+2))
	c=c+1
	i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:23:51) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	print(round(pia=3))
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
print(round(pia, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:24:13) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	print(round(pia=3))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:24:46) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:24:56) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
		print(round(pia, 8))
-- OUTPUT:
3.16666667
3.2
3.21190476
3.21746032
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:08) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:18) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:22) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:26:17) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n-1):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:26:21) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n-1):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:26:53) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:27:23) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ 4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:27:48) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ sinal*4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:27:54) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n):
		sinal= (-1)**c
		pia= pia+ sinal*4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:28:03) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n-1):
		sinal= (-1)**c
		pia= pia+ sinal*4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:28:07) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n-1):
		sinal= (-1)**c
		pia= pia+ sinal*4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:28:11) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n-1):
		sinal= (-1)**c
		pia= pia+ sinal*4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:28:16) 
-- CODE:
n= float(input("numero k: "))
pia= 3
c=0
i= 2
if (n==1):
	pia=3.0
	print(round(pia, 8))
else:
	while (c<n-1):
		sinal= (-1)**c
		pia= pia+ sinal*4/((i)* (i+1)*(i+2))
		c=c+1
		i= i + 2
	print(round(pia, 8))
-- EXECUTION TIME:
0.145258
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
